[package]
name = "seahorse"
description = "A generic cap-style cryptocurrency wallet."
authors = ["Jeb Bearer <jeb.bearer@translucence.net>"]
version = "0.1.0"
edition = "2018"

[dependencies]
arbitrary = { version="1.0", features=["derive"] }
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
async-scoped = { version = "0.7.0", features = ["use-async-std"] }
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
bincode = "1.3.3"
chacha20 = "0.8.1"
chrono = "0.4.19"
futures = "0.3.16"
generic-array = { version = "0.14.4", features = ["serde"] }
hmac = "0.11.0"
itertools = "0.10.1"
lazy_static = "1.4.0"
mnemonic = "1.0.1"
pipe = { version = "0.4" }
proptest = { version = "0.8.7", optional = true }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
regex = "1.5.4"
rpassword = "5.0.1"
rust-argon2 = "0.8.3"
rustyline = "9.0.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "^0.9"
snafu = { version = "0.6.10", features = ["backtraces"] }
strum = "0.20"
strum_macros = "0.20.1"
surf = "2.3.1"
tempdir = "0.3.7"
zeroize = "1.3"

# local dependencies

atomic_store = { git = "ssh://git@github.com/EspressoSystems/atomicstore.git" }
commit = { git = "ssh://git@github.com/EspressoSystems/commit.git", rev = "f48cd52c59755eade0605111826eef3df6abdcf8" }
key-set = { git = "ssh://git@github.com/EspressoSystems/key-set.git" }
zerok-macros = { git = "ssh://git@github.com/EspressoSystems/zerok-macros.git" }
jf-cap = { features=["std"], git = "ssh://git@github.com/EspressoSystems/cap.git", rev = "16ad157f96d2102d59206df0106fb341302180d3" }
jf-utils = { features=["std"], git = "ssh://git@github.com/EspressoSystems/jellyfish.git" }
arbitrary-wrappers = { git = "ssh://git@github.com/EspressoSystems/arbitrary-wrappers.git" }
net = { git = "ssh://git@github.com/EspressoSystems/net.git" }
reef = { git = "ssh://git@github.com/EspressoSystems/reef.git" }
tagged-base64 = { git = "ssh://git@github.com/EspressoSystems/tagged-base64.git", branch = "main" }

[dev-dependencies]
proptest = "0.8.7"

[features]
testing = ["proptest"]
