[package]
name = "seahorse"
description = "A generic cap-style cryptocurrency wallet."
authors = ["Espresso Systems <hello@espressosys.com>"]
version = "0.2.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
arbitrary = { version="1.0", features=["derive"] }
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
async-scoped = { version = "0.7.0", features = ["use-async-std"] }
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.53"
bincode = "1.3.3"
bip0039 = "0.10"
chacha20 = "0.8.1"
chrono = "0.4.19"
derivative = "2.2"
futures = "0.3.16"
generic-array = { version = "0.14.4", features = ["serde"] }
hmac = "0.11.0"
image = "0.24"
itertools = "0.10.1"
lazy_static = "1.4.0"
pipe = { version = "0.4" }
proptest = { version = "0.8.7", optional = true }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
regex = "1.5.4"
rpassword = "5.0.1"
rust-argon2 = "1.0.0"
rustyline = "9.0.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "^0.9"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = "0.3"
strum = "0.20"
strum_macros = "0.20.1"
surf = "2.3.1"
tempdir = "0.3.7"
zeroize = "1.3"

# local dependencies
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git" }
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros.git" }
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git" }
jf-primitives = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
jf-utils = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git" }
arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git" }
net = { git = "https://github.com/EspressoSystems/net.git" }
reef = { git = "https://github.com/EspressoSystems/reef.git" }
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", branch = "main" }

[dev-dependencies]
proptest = "0.8.7"

[features]
testing = ["proptest"]
