[package]
name = "seahorse"
description = "A generic cap-style cryptocurrency keystore."
authors = ["Espresso Systems <hello@espressosys.com>"]
version = "0.3.0"
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
arbitrary = { version="1.0", features=["derive"] }
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
async-scoped = { version = "0.7.0", features = ["use-async-std"] }
async-std = { version = "1.10.0", features = ["unstable", "attributes"] }
async-trait = "0.1.51"
bincode = "1.3.3"
bip0039 = "0.10"
chacha20 = "0.8.1"
chrono = "0.4.19"
criterion = {version = "0.3.3", features = ["async_std", "html_reports", "cargo_bench_support", "csv_output"], optional = true }
derivative = "2.2"
derive_more = "0.99"
futures = "0.3.16"
generic-array = { version = "0.14.4", features = ["serde"] }
hmac = "0.11.0"
image = "0.24"
itertools = "0.10.1"
lazy_static = "1.4.0"
num-bigint = "0.4"
num-traits = "0.2"
pipe = { version = "0.4" }
primitive-types = "0.11"
proptest = { version = "0.8.7", optional = true }
rand_chacha = { version = "0.3.1", features = ["serde1"] }
regex = "1.5.4"
rpassword = "5.0.1"
rust-argon2 = "1.0.0"
rustyline = "9.0.0"
serde = { version = "1.0", features = ["derive"] }
sha3 = "^0.9"
snafu = { version = "0.7", features = ["backtraces"] }
structopt = "0.3"
strum = "0.24"
strum_macros = "0.20.1"
surf = "2.3.1"
tempdir = "0.3.7"
tracing = "0.1.35"
zeroize = "1.3"

# local dependencies
atomic_store = { git = "https://github.com/EspressoSystems/atomicstore.git", tag = "0.1.1" }
commit = { git = "https://github.com/EspressoSystems/commit.git", tag = "0.1.0" }
key-set = { git = "https://github.com/EspressoSystems/key-set.git" }
espresso-macros = { git = "https://github.com/EspressoSystems/espresso-macros.git", tag = "0.1.0" }
jf-cap = { features=["std"], git = "https://github.com/EspressoSystems/cap.git", branch = "testnet-v1" }
jf-primitives = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
jf-utils = { features=["std"], git = "https://github.com/EspressoSystems/jellyfish.git", tag = "0.1.1" }
arbitrary-wrappers = { git = "https://github.com/EspressoSystems/arbitrary-wrappers.git"}
net = { git = "https://github.com/EspressoSystems/net.git" }
reef = {  git = "https://github.com/EspressoSystems/reef.git" }
tagged-base64 = { git = "https://github.com/EspressoSystems/tagged-base64.git", tag = "0.2.0" }

[dev-dependencies]
criterion = {version = "0.3.3", features = ["async_std", "html_reports", "cargo_bench_support", "csv_output"] }
proptest = "0.8.7"
quickcheck = "1.0"
quickcheck_macros = "1.0"
rand = "0.8.5"
reef = { git = "https://github.com/EspressoSystems/reef.git", features = ["testing"] }

[features]
slow-tests = []
testing = ["proptest", "criterion", "reef/testing"]

[[bench]]
name = "generic"
harness = false
required-features = ["testing"]
